# bootcamp_ecommerce

./: Procfile  pyproject.toml
bootcamp_ecommerce/: main.py
bootcamp_ecommerce/api/: __common_deps.py
bootcamp_ecommerce/api/config/: database.py
bootcamp_ecommerce/api/models/: orders.py  products.py  users.py
bootcamp_ecommerce/api/routes/: auth.py  orders.py  products.py  users.py
bootcamp_ecommerce/api/services/: auth.py  orders.py  products.py  users.py
bootcamp_ecommerce/scripts/: ADMIN_USER_CONF.example  drop_collections.py  seed_database.py
tests/: conftest.py  pytest.ini  skip_test_products.py  test_users.py
tests/auth/: test_authenticated_user_auth.py  test_login_auth.py
tests/users/: conftest.py  test_create_user.py  test_delete_user.py  test_get_all_active_users.py  test_get_all_deleted_user.py  test_get_all_user.py  test_get_one_user.py  test_update_user.py
tests/utils/: __init__.py  dependency_overrider.py
