[tool.poetry]
name = "bootcamp_ecommerce"
version = "0.1.0"
description = "Las bases para la creación de una API de un \"eCommerce\" de ejemplo"
authors = ["Fernando Corrales <fscpython@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {version = "^0", extras = ["standard"]}
pymongo = { extras = ["srv"], version = "^4.8.0" }
pydantic-mongo = "^2.3.0"
fastapi-jwt = { extras = ["authlib"], version = "^0.3.0" }
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
pytest = "^8.3.2"
httpx = "^0.27.2"
jsonschema = "^4.23.0"
bpython = "^0.24"
python-multipart = "^0.0.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
